# score-addon-jit

./: .gitignore  CMakeLists.txt  README.md  score_addon_jit.cpp  score_addon_jit.hpp
Benchmarks/: Benchmarker.cpp  Gain.cpp  Gain.hpp  kfr-fft.cpp  main.cpp
Bytebeat/: Bytebeat.cpp  Bytebeat.hpp
JitCpp/: AddonCompiler.cpp  AddonCompiler.hpp  ApplicationPlugin.cpp  ApplicationPlugin.hpp  ClangDriver.cpp  ClangDriver.hpp  EditScript.hpp  Jit.hpp  JitModel.cpp  JitModel.hpp  JitOptions.hpp  JitPlatform.hpp  JitUtils.hpp  MetadataGenerator.hpp  cc1_main.cpp
JitCpp/Compiler/: Compiler.hpp  Driver.hpp  Linker.hpp
PluginSettings/: FileDownloader.cpp  PluginItemModel.cpp  PluginItemModel.hpp  PluginSettings.hpp  PluginSettingsModel.cpp  PluginSettingsPresenter.cpp  PluginSettingsPresenter.hpp  PluginSettingsView.cpp  PluginSettingsView.hpp
Texgen/: Texgen.cpp  Texgen.hpp
sdk-jit/: common.sh  linux.sh
tools/: create-sdk-linux.sh  create-sdk-mac.sh  create-sdk-mingw.sh
